--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="diagram_part">
-                    <img src="Images/Illustration.png" alt="">
+                    <img src="images/Illustration.png" alt="">
                 </div>
             </div>
         </div>
